# davinci-resolve-mcp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: ARCHITECTURE.md  CLAUDE_DESKTOP.md  TOOLS.md
scripts/: check_resolve.py  generate_tool_docs.py
src/davinci_resolve_mcp/: __init__.py  constants.py  exceptions.py  models.py  resolve_api.py  server.py
src/davinci_resolve_mcp/resources/: __init__.py  project_info.py  system_info.py  timeline_info.py
src/davinci_resolve_mcp/tools/: __init__.py  _helpers.py  color.py  fairlight.py  fusion.py  gallery.py  media_pool.py  media_pool_item.py  media_storage.py  playback.py  project.py  render.py  timeline.py  timeline_item.py
tests/: conftest.py  test_advanced.py  test_color.py  test_fairlight.py  test_fusion.py  test_gallery.py  test_integration.py  test_media_pool.py  test_media_pool_item.py  test_media_storage.py  test_playback.py  test_project.py  test_render.py  test_resolve_api.py  test_resources.py  test_timeline.py  test_timeline_item.py
